<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context="com.bezlepkin.photoeditor.PhotoEditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/image_wrap_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop" />

            <com.bezlepkin.photoeditorsdk.BrushDrawingView
                android:id="@+id/drawing_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image_view"
                android:layout_alignBottom="@+id/image_view"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mode_controls_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/close_button"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/round"
                    android:contentDescription="@string/close"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_close" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/crop_button"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/round"
                    android:contentDescription="@string/crop"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_crop" />

                <ImageButton
                    android:id="@+id/draw_button"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/round"
                    android:contentDescription="@string/draw"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_draw" />

                <ImageButton
                    android:id="@+id/text_button"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/round"
                    android:contentDescription="@string/text"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_text" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/delete_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/delete_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_border_text_view"
                android:padding="10dp"
                android:text="delete"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/action_controls_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/cancel_button"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/round"
                android:contentDescription="@string/cancel"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_left" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/apply_button"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/round_invert"
                android:contentDescription="@string/apply"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_check" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_controls_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="16dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/drawing_view_color_picker_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>